argocd/honcho/deriver.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deriver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: honcho-deriver
  template:
    metadata:
      labels:
        app: honcho-deriver
    spec:
      containers:
        - name: deriver
          image: harbor.yanello.net/ghcr/plastic-labs/honcho:v3.2.1@sha256:a6bf2f03d47d91281521830ba2a32710a60bde207c37c8f2049fd1ac7619c6d9
          imagePullPolicy: Always
          command: ["/app/.venv/bin/python", "-m", "src.deriver"]
          resources:
            requests:
              cpu: 20m
              memory: 256Mi
            limits:
              memory: 512Mi
