argocd/honcho/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: honcho-http-route
spec:
  parentRefs:
    - name: cilium-private-gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - honcho.yanello.net
  rules:
    - backendRefs:
        - name: honcho-api
          namespace: honcho
          port: 8000
          weight: 1
          group: ""
          kind: Service
